b2c/sfsc/src/objects/Account.object
<CustomObject>  
    <fields>
        <fullName>SCCActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in the Salesforce Connector code</description>
        <inlineHelpText>If this is unchecked the customers online account has been disabled</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFCC_Last_Login_Time__c</fullName>
        <description>This field will store the last login time of the customer from CC</description>
        <label>Last Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFCC_Last_Visit_Time__c</fullName>
        <description>This field will store the last visit time of the customer from CC</description>
        <label>Last Visit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFCC_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFCC update</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>SCC_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>SFCC_Customer_Number__pc</columns>
        <columns>Contact_Status__pc</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>SCC Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>     
    </recordTypes>    
</CustomObject>